--- a/english-app-vue/package.json
+++ b/english-app-vue/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
     "vue": "^3.2.19",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
