--- a/english-app-vue/package.json
+++ b/english-app-vue/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.6.0",
     "vue": "^3.2.19",
     "vue-axios": "^3.3.7",
+    "vue-nl2br": "^0.1.2",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
